Added support for java 11